dnl =========================================================================
dnl                    Copyright (C) 2000 by Niels Basjes
dnl                   SuckMT Website: http://go.to/suckmt
dnl                         Author: SuckMT@Basjes.nl
dnl -------------------------------------------------------------------------
dnl   Filename  : configure.in_
dnl   Sub-system: SuckMT, a multithreaded suck replacement
dnl   Language  : Automake
dnl   $Date: 2000/07/08 14:11:55 $
dnl   $Revision: 1.10 $
dnl   $RCSfile: configure.in_,v $
dnl   $Author: niels $
dnl =========================================================================
dnl 
dnl    This program is free software; you can redistribute it and/or modify
dnl    it under the terms of the GNU General Public License as published by
dnl    the Free Software Foundation; either version 2 of the License, or
dnl    (at your option) any later version.
dnl 
dnl =========================================================================

dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(suckmt,0.53)

AC_ARG_ENABLE(debug,
[  --enable-debug    Turn debugging on
  --disable-debug   Turn debugging off],
[case "${enableval}" in
  yes) debug=true ;;
   no) debug=false ;;
    *) debug=false ;;
 esac],[debug=false])

AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

dnl Detect the operating system and set the correct flag

AM_CONDITIONAL(UNAME_LINUX, test x`uname` = xLinux)
AM_CONDITIONAL(UNAME_IRIX,  test x`uname` = xIRIX)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
